--- a/ArtStation_Dashboard/Views/_ViewImports.cshtml
+++ b/ArtStation_Dashboard/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using ArtStation_Dashboard
 @using ArtStation_Dashboard.Models
+@using ArtStation.Core.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
