--- a/ArtStation_Dashboard/Views/_ViewImports.cshtml
+++ b/ArtStation_Dashboard/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using ArtStation_Dashboard
 @using ArtStation_Dashboard.Models
 @using ArtStation.Core.Entities
+@using ArtStation_Dashboard.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
