--- a/ArtStation_Dashboard/Views/Shared/_Navbar.cshtml
+++ b/ArtStation_Dashboard/Views/Shared/_Navbar.cshtml
@@ -1,4 +1,6 @@
-﻿<nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 shadow-none border-radius-xl" id="navbarBlur" navbar-scroll="true">
+﻿
+
+<nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 shadow-none border-radius-xl" id="navbarBlur" navbar-scroll="true">
     <div class="container-fluid py-1 px-3">
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb bg-transparent mb-0 pb-0 pt-1 px-0 me-sm-6 me-5">
@@ -20,6 +22,11 @@
                         <i class="fa fa-user me-sm-1"></i>
                         <span class="d-sm-inline d-none">Sign In</span>
                     </a>
+                </li>
+
+                <li>
+                    <a href="/Home/SetLanguage?culture=en">English</a> |
+                    <a href="/Home/SetLanguage?culture=ar">العربية</a>
                 </li>
                 <li class="nav-item d-xl-none ps-3 d-flex align-items-center">
                     <a href="javascript:;" class="nav-link text-body p-0" id="iconNavbarSidenav">
