--- a/ArtStation_Dashboard/Views/Shared/_OurLayout.cshtml
+++ b/ArtStation_Dashboard/Views/Shared/_OurLayout.cshtml
@@ -30,7 +30,11 @@
     <partial name="_aside"></partial>
     <div class="main-content position-relative max-height-vh-100 h-100 border-radius-lg ">
         <partial name="_Navbar"></partial>
+        <div class="container">
+            <main role="main" class="pb-3">
         @RenderBody()
+        </main>
+        </div>
     </div>
     <div class="fixed-plugin">
         <a class="fixed-plugin-button text-dark position-fixed px-3 py-2">
@@ -373,5 +377,7 @@
     <script async defer src="https://buttons.github.io/buttons.js"></script>
     <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
     <script src="~/assets/js/material-dashboard.min.js?v=3.0.0"></script>
+    @await RenderSectionAsync("Scripts", required: false)
+
 </body>
 </html>
