--- a/ArtStation_Dashboard/Views/_ViewImports.cshtml
+++ b/ArtStation_Dashboard/Views/_ViewImports.cshtml
@@ -2,4 +2,6 @@
 @using ArtStation_Dashboard.Models
 @using ArtStation.Core.Entities
 @using ArtStation_Dashboard.ViewModels
+@using ArtStation.Core.Helper
+@using ArtStation_Dashboard.Helper
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
