--- a/ArtStation_Dashboard/Views/Category/Details.cshtml
+++ b/ArtStation_Dashboard/Views/Category/Details.cshtml
@@ -1,15 +1,15 @@
 ﻿@model CategoryVM
 
 @{
-    ViewData["Title"] = "Category Details";
     var language = ViewData["Language"] as string ?? "en";
+    ViewData["Title"] = ("تفاصيل التصنيف" , "Category Details").Localize(language);
     var name = (Model.NameAR, Model.NameEN).Localize(language);
 }
 <div class="container py-5 ">
     <div class="card shadow-lg rounded-4 overflow-hidden">
         <div class="row g-0">
             <div class="col-md-5">
-                <img src="~/Uploads/Categories/skincare.jpeg" class="img-fluid h-100 w-100 object-fit-cover" alt="@name" style="min-height: 300px;" />
+                <img src="~/Uploads/Categories/@Model.Image class="img-fluid h-100 w-100 object-fit-cover" alt="@name" style="min-height: 300px;" />
             </div>
             <div class="col-md-7">
                 <div class="card-body p-5">
