--- a/ArtStation_Dashboard/Views/Category/Edit.cshtml
+++ b/ArtStation_Dashboard/Views/Category/Edit.cshtml
@@ -1,11 +1,11 @@
-﻿@model CreatedCategory
+﻿@model CategoryVM
 @{
     var language = ViewData["Language"] as string ?? "en";
-    ViewData["Title"] = ("إضافة تصنيف جديد","Create New Category").Localize(language);
+    ViewData["Title"] = ("تعديل التصنيف", "Edit Category").Localize(language);
 }
 
 <div class="m-auto  bg-white p-5">
-    <h1>@(("إضافة قسم جديد","Create New Category").Localize(language))</h1>
+    <h1>@(("تعديل التصنيف", "Edit Category").Localize(language))</h1>
     @if (!string.IsNullOrEmpty(TempData["Message"] as string))
     {
         <div class="alert alert-primary mt-3 mb-2">
@@ -13,15 +13,17 @@
         </div>
     }
     <hr />
-    <form asp-action="Create" method="post" enctype="multipart/form-data">
+    <form asp-action="Edit" method="post" enctype="multipart/form-data">
 
         <div asp-validation-summary="All" class="text-danger"></div>
         <div class="row  ">
 
+        <input asp-for="Id" hidden/>
             <br />
+
             <div class="col-md-6">
                 <div class="input-group input-group-outline my-3">
-                    <label class="form-label">@(("اسم التصنيف باللغه العربية" , "Category Name In Arabic").Localize(language))</label>
+                    <label class="form-label">@(("اسم التصنيف باللغه العربية", "Category Name In Arabic").Localize(language))</label>
                     <input asp-for="NameAR" type="text" class="form-control">
                     <span asp-validation-for="NameAR" class="text-danger"></span>
                 </div>
@@ -42,7 +44,7 @@
 
                     <div class="input-group">
                         <span class="input-group-text">
-                            <i class="fas fa-image"></i> 
+                            <i class="fas fa-image"></i>
                         </span>
                         <input asp-for="PhotoFile"
                                type="file"
@@ -53,14 +55,14 @@
                     <span asp-validation-for="PhotoFile" class="text-danger mt-1"></span>
                 </div>
             </div>
-
+            <input asp-for="Image" hidden/>
 
         </div>
 
         <div class="form-group mt-4">
-            <input type="submit" value="@(("إضافة","Add").Localize(language))" class="btn btn-primary" />
+            <input type="submit" value="@(("تعديل","Edit").Localize(language))" class="btn btn-primary" />
             <a asp-action="Index" class="btn btn-light ms-2">
-                    @(language == "en" ? "Back to List" : "العودة إلى القائمة")
+                @(language == "en" ? "Back to List" : "العودة إلى القائمة")
             </a>
         </div>
     </form>
@@ -71,4 +73,3 @@
     <partial name="_ValidationScriptsPartial" />
 
 }
-
