--- a/ArtStation_Dashboard/Views/Shared/_OurLayout.cshtml
+++ b/ArtStation_Dashboard/Views/Shared/_OurLayout.cshtml
@@ -35,7 +35,7 @@
         <div class="sidenav-header">
             <i class="fas fa-times p-3 cursor-pointer text-white opacity-5 position-absolute end-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
             <a class="navbar-brand m-0" href=" https://demos.creative-tim.com/material-dashboard/pages/dashboard " target="_blank">
-                <img src="./assets/img/logo-ct.png" class="navbar-brand-img h-100" alt="main_logo">
+                <img src="~/assets/img/logo-ct.png" class="navbar-brand-img h-100" alt="main_logo">
                 <span class="ms-1 font-weight-bold text-white">Material Dashboard 2</span>
             </a>
         </div>
@@ -129,21 +129,13 @@
     @* <partial name="_aside"></partial> *@
 
     <div class="main-content position-relative  h-100 border-radius-lg  @(dir == "rtl" ? "overflow-x-hidden" :"overflow-x-hidden" ) ">
-        <partial name="_Navbar"></partial> 
-
-      <div class="@(dir == "rtl" ? "overflow-x-hidden" :"" )">
-            @RenderBody()
-      </div>
-      
-
-    <div class="main-content position-relative max-height-vh-100 h-100 border-radius-lg ">
         <partial name="_Navbar"></partial>
+
         <div class="container">
             <main role="main" class="pb-3">
-        @RenderBody()
-        </main>
+                @RenderBody()
+            </main>
         </div>
->>>>>>> d3c5c8d87fbbc52af6cd9470b42ede005b381558
     </div>
    
     
