Add Signin / Logout /Add Trader Account

--- a/ArtStation_Dashboard/Views/Shared/_OurLayout.cshtml
+++ b/ArtStation_Dashboard/Views/Shared/_OurLayout.cshtml
@@ -1,8 +1,14 @@
-﻿@{
+﻿
+@using Microsoft.AspNetCore.Mvc.Localization
+@using Microsoft.Extensions.Localization
+@using  ArtStation_Dashboard.Resource
+
+@{
     var culture = System.Globalization.CultureInfo.CurrentUICulture;
     var dir = culture.TextInfo.IsRightToLeft ? "rtl" : "ltr";
     var lang = culture.Name;
 }
+
 <!DOCTYPE html>
 
 <html lang="@lang" dir="@dir">
@@ -47,7 +53,10 @@
                         <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                             <i class="material-icons opacity-10">dashboard</i>
                         </div>
-                        <span class="nav-link-text ms-1">Dashboard</span>
+                       
+                        <span class="nav-link-text ms-1">@(("لوحة التحكم","DashBoard").Localize(lang))</span>
+                     
+
                     </a>
                 </li>
                 <li class="nav-item">
@@ -65,6 +74,9 @@
                         </div>
                         <span class="nav-link-text ms-1">Billing</span>
                     </a>
+
+                    <a asp-action="AddTrader" asp-controller="Trader">Trader</a>
+
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white " href="./pages/virtual-reality.html">
@@ -88,6 +100,7 @@
                             <i class="material-icons opacity-10">notifications</i>
                         </div>
                         <span class="nav-link-text ms-1">Notifications</span>
+                        
                     </a>
                 </li>
                 <li class="nav-item mt-3">
