--- a/ArtStation_Dashboard/Views/Auth/Signin.cshtml
+++ b/ArtStation_Dashboard/Views/Auth/Signin.cshtml
@@ -37,7 +37,7 @@
         <div class="row">
             <div class="col-12">
                 <!-- Navbar -->
-                <nav class="navbar navbar-expand-lg blur border-radius-xl top-0 z-index-3 shadow position-absolute my-3 py-2 start-0 end-0 mx-4">
+                <nav class=" text-center navbar navbar-expand-lg blur border-radius-xl top-0 z-index-3 shadow position-absolute my-3 py-2 start-0 end-0 mx-4">
                     <div class="container-fluid ps-2 pe-0">
                       <div>@ViewMessages.WelcomeWhenLogin</div>
                     </div>
@@ -55,7 +55,7 @@
                         <div class="card z-index-0 fadeIn3 fadeInBottom">
                             <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
                                 <div class="bg-gradient-primary shadow-primary border-radius-lg py-3 pe-1">
-                                    <h4 class="text-white font-weight-bolder text-center mt-2 mb-0">Sign in</h4>
+                                    <h4 class="text-white font-weight-bolder text-center mt-2 mb-0">@(("تسجيل الدخول", "Sign in").Localize(lang))</h4>
                                     <div class="row mt-3">
                                         <div class="col-2 text-center ms-auto">
                                             <a class="btn btn-link px-3" href="javascript:;">
@@ -78,19 +78,23 @@
                             <div class="card-body">
                                 <form role="form" class="text-start" asp-action="Signin" method="post">
                                     <div class="input-group input-group-outline my-3">
+                                       
                                         <label class="form-label">@(("اسم المستخدم", "User Name").Localize(lang))</label>
                                         <input asp-for="UserName" class="form-control">
+                                        <span asp-validation-for="UserName"></span>
+
                                     </div>
                                     <div class="input-group input-group-outline mb-3">
                                         <label class="form-label">@(("كلمه السر","Password").Localize(lang))</label>
                                         <input  asp-for="Password" type="password" class="form-control">
+                                        <span asp-validation-for="Password"></span>
                                     </div>
                                     <div class="form-check form-switch d-flex align-items-center mb-3">
                                         <input asp-for="RememberMe" class="form-check-input" type="checkbox" id="rememberMe">
                                         <label class="form-check-label mb-0 ms-2" for="rememberMe">@(("تذكرنى", "Remember Me ").Localize(lang))</label>
                                     </div>
                                     <div class="text-center">
-                                        <button type="submit" class="btn bg-gradient-primary w-100 my-4 mb-2">Sign in</button>
+                                        <button type="submit" class="btn bg-gradient-primary w-100 my-4 mb-2">@(("تسجيل الدخول", "Sign in").Localize(lang))</button>
                                     </div>
                                     @* <p class="mt-4 text-sm text-center"> *@
                                     @*     Don't have an account? *@
