--- a/ArtStation_Dashboard/Views/Auth/Signin.cshtml
+++ b/ArtStation_Dashboard/Views/Auth/Signin.cshtml
@@ -77,6 +77,7 @@
                             </div>
                             <div class="card-body">
                                 <form role="form" class="text-start" asp-action="Signin" method="post">
+                                    <div asp-validation-summary="All" class="text-danger"></div>
                                     <div class="input-group input-group-outline my-3">
                                        
                                         <label class="form-label">@(("اسم المستخدم", "User Name").Localize(lang))</label>
