--- a/ArtStation_Dashboard/Views/Product/Index.cshtml
+++ b/ArtStation_Dashboard/Views/Product/Index.cshtml
@@ -63,7 +63,7 @@
                                         <span class="text-secondary text-xs font-weight-bold">@product.Name</span>
                                     </td>
                                     <td class="align-middle text-center">
-                                        <img src="~/Uploads/Categories/@product.Image" class="avatar avatar-sm border-radius-lg" alt="user2">
+                                        <img src="~/Uploads/Products/@product.Image" class="avatar avatar-sm border-radius-lg" alt="user2">
                                     </td>
                                     <td class="align-middle text-center">
                                         <span class="text-secondary text-xs font-weight-bold">@product.Brand</span>
