--- a/ArtStation_Dashboard/Views/Shared/_OurLayout.cshtml
+++ b/ArtStation_Dashboard/Views/Shared/_OurLayout.cshtml
@@ -77,7 +77,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white " asp-action="Index" asp-controller="Trader">
+                        <a class="nav-link text-white " asp-action="Index" asp-controller="User">
                             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                                 <i class="fa-solid fa-users"></i>
                             </div>
@@ -541,7 +541,8 @@
           Scrollbar.init(document.querySelector('#sidenav-scrollbar'), options);
         }
 
-       
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     </script>
     <!-- Github buttons -->
     <script async defer src="https://buttons.github.io/buttons.js"></script>
